--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,6 +5,16 @@
     year = {2014}
 }
 
+@inproceedings{Varavin:2003,
+  title={HgCdTe epilayers on GaAs: growth and devices},
+  author={Varavin, Vasily S and Vasiliev, VV and Dvoretsky, Sergey A and Mikhailov, Nikolay N and Ovsyuk, Victor N and Sidorov, Yuri G and Suslyakov, AO and Yakushev, MV and Aseev, Alexander L},
+  booktitle={Solid State Crystals 2002: Crystalline Materials for Optoelectronics},
+  volume={5136},
+  pages={381--396},
+  year={2003},
+  organization={International Society for Optics and Photonics}
+}
+
 @article{AbakumovYassievich1997,
   title={Безызлучательная рекомбинация в полупроводниках},
   author={Абакумов, ВН and Перель, ВИ and Яссиевич, ИН},
@@ -183,12 +193,23 @@ and Spirin, K. and Aleshkin, V. and Gavrilenko, V. and Knap, W.},
   organization={IOP Publishing}
 }
 
-@inproceedings{Utochkin:PTS:2019,
+@article{Utochkin:PTS:2019,
   title={Исследование пороговой энергии оже-рекомбинации в волноводных структурах с квантовыми ямами HgTe/Cd0.7Hg0.3Te в области 14 мкм},
-  author={Уточкин, В.В. and Алёшкин, В.Я. and Дубинов, А.А. and Гавриленко, В.И. and Куликов, Н.С. and Фадеев, М.А. and Румянцев, В.В. and Михайлов, Н.Н. and Дворецкий, С.А. and Морозов, С.В.},
+  author={Уточкин, В.В. and Алёшкин, В.Я. and Куликов, Н.С. and Дубинов, А.А. and Гавриленко, В.И. and Фадеев, М.А. and Румянцев, В.В. and Михайлов, Н.Н. and Дворецкий, С.А. and Морозов, С.В.},
   heading = {Уточкин, В.В.},
   year={2019},
   journal = {Физика и техника полупроводников}
+}
+
+@article{Kozlov:2019,
+  title={Особенности фотолюминесценции двойных акцепторов в гетероструктурах HgTe/СdHgTe с квантовыми ямами в терагерцовом диапазоне},
+  author={Козлов, Дмитрий Владимирович and Румянцев, В В and Куликов, Н С and Кадыков, А М and Фадеев, М А and Уточкин, В В and Михайлов, Н Н and Дворецкий, С А and Гавриленко, В И and Хьюберс, Г В and others},
+  journal={Письма в Журнал экспериментальной и теоретической физики},
+  volume={109},
+  number={10},
+  pages={679--684},
+  year={2019},
+  publisher={Российская академия наук, Отделение физических наук}
 }
 
 @article{Asryan:IOP:2005,
