--- a/sections/augerThresholdCalculation.tex
+++ b/sections/augerThresholdCalculation.tex
@@ -1,7 +1,7 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-    \chapter{Расчёт порога оже-рекомбинации}
+    \chapter{Расчёт пороговой энергии\\ оже-процессов}
     \section{Метод расчёта}
 
     Как известно в случае гетероструктур с квантовыми ямами состояние
@@ -11,7 +11,7 @@
     в плоскости ямы. Для простоты мы не будем отличать нумерацию зон и нумерацию
     по поперечному импульсу, так называемая структура подзон. В таком случае мы 
     можем гамильтониан, имеющий собственные значения $\varepsilon_i (\vec{k})$. 
-    В дальнейшем мы на некоторое время отвлечёмся от рассматриваемой задачи и 
+    В дальнейшем мы на некоторое время отвлечёмся от данной задачи и 
     рассмотрим некоторые общие соотношения.
 
     Рассмотрим произвольный оже-процесс: как известно в него вступают две квази-частицы
@@ -99,7 +99,7 @@
     к поиску экстремума функции (здесь уже неявно учтён 
     закон сохранения импульса):
     \begin{multline}
-        L (\vec{k}_1,\vec{k}_2,\vec{k}_3, \lambda) = \varepsilon_f(\vec{k}_1 + \vec{k}_2 - \vec{k}_3) - \alpha E_g + \\
+        L (\vec{k}_1,\vec{k}_2,\vec{k}_3, \lambda) = \varepsilon_f(\vec{k}_1 + \vec{k}_2 - \vec{k}_3) - \beta E_g + \\
             \lambda \cdot \left(\varepsilon_1(\vec{k}_1) + 
             \varepsilon_2(\vec{k}_2) - \varepsilon_3(\vec{k}_3) - \varepsilon_f(\vec{k}_1 + \vec{k}_2 + \vec{k}_j)\right);
     \end{multline}
@@ -151,7 +151,7 @@
         Очевидно что все предыдущие рассуждения не имеют никакого смысла, если нам не известны дисперсионные 
         соотношения для частиц. Однако чтобы получить его нам необходимо конкретизировать
         рассматриваемую физическую задачу. В данной работе рассматривались квантовые ямы HgCdTe/CdHgTe, выращенные 
-        на плоскости [013] на буффере CdTe. Такое направление было выбрано в силу технологических причин (более
+        на плоскости [013] на буффере CdTe и подложке GaAs \cite{Varavin:2003}. Такое направление было выбрано в силу технологических причин (более
         высокая скорость роста), буффер же отвечает за постоянную решётки и напряжения в кристалле,
         которые могут существенно повлиять на вид дисперсионного соотношения.
 
@@ -275,7 +275,11 @@
         $18~\mu m$. Результаты расчётов спектра электронов и дырок для двух случаев приведены на рисунке ниже. В первом случае (рис. в) расчёт проведён 
         для экспериментально исследованной Cd${}_{0.1}$Hg${}_{0.9}$Te/Cd${}_{0.65}$Hg${}_{0.35}$Te КЯ толщиной 8.7 nm, во втором случае (рис. г) расчёт проведён для 
         HgTe/Cd${}_{0.65}$Hg${}_{0.35}$Te КЯ толщиной 4.4 nm.
-        
+
+        Из рисунка a видно, что для первого случая в валентных подзонах имеются дополнительные максимумы, располагающиеся ниже потолка валентной 
+        зоны на 7 meV. В HgTe яме, окруженной Cd${}_{0.65}$Hg${}_{0.35}$Te, эти экстремумы практически отсутствуют (рис. г). Как было показано ниже
+        вид дисперсионного соотношения может существенно влиять на порог оже-процессов.
+
         \begin{figure}[h!]
             \begin{minipage}[h]{0.49\linewidth}
                 \begin{center}
@@ -295,11 +299,7 @@
                 \end{center}
             \end{minipage}
         \end{figure}
-
-        Из рисунка a видно, что для первого случая в валентных подзонах имеются дополнительные максимумы, располагающиеся ниже потолка валентной 
-        зоны на 7 meV. В HgTe яме, окруженной Cd${}_{0.65}$Hg${}_{0.35}$Te, эти экстремумы практически отсутствуют (рис. г). Как было показано ниже
-        вид дисперсионного соотношения может существенно влиять на порог оже-процессов.
-        \newpage
+        
 
         \section{Зависимость оже-порога в зависимости от состава барьера}
 
