--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -1,9 +1,7 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-\begin{center}
     \chapter{Введение}
-\end{center}
 
 Одной из наиболее актуальных проблем современной прикладной физики является
 получение источников когерентного излучения терагерцового (THz) диапазона. Такие
@@ -17,9 +15,9 @@
 В настоящее время имеется несколько способов генерации подобного излучения, которые, однако, 
 имеют много недостатков. Одним из классов таких приборов являются квантово-каскадные лазеры (QCL).
 Они демоснтрируют превосходные характеристики (высокий КПД, высокий уровень когерентности)
-в диапазоне 1-5 THz и выше 15 THz. Однако большая часть таких лазеров создается на основе 
+в диапазоне 1-5 THz и выше 15 THz \cite{Intro1}. Однако большая часть таких лазеров создается на основе 
 полупроводников типа A3B5 (GaAs, PbSb или InP), которые имеют высокое поглощение на оптических 
-фононах в диапазоне 5-15 THz. QCL на основе GaN подступают к спектральному диапазону 5 - 15 ТГц со
+фононах в диапазоне 5-15 THz. QCL на основе GaN подступают к спектральному диапазону 5 - 15 THz со
 стороны низких частот (относительно частот оптических фононов), но их рабочие характеристики 
 требуют значительного улучшения \cite{Intro7}.
 
@@ -27,11 +25,11 @@
 Такие лазеры намного проще в изготовлении, а также могут излучать в диапазоне 5-15 THz. Кроме того, их 
 отличительной чертой является возможность перестройки частоты в достаточно широком диапазоне, за счет 
 изменения температуры. Однако ограничивающим
-фактором является процесс безызлучательной Оже-рекомбинации. При этом традиционна ожидается, что этот процесс
+фактором является процесс безызлучательной Оже-рекомбинации. При этом традиционно ожидается, что этот процесс
 рекомбинации будет весьма существенным.
 
 Оже-рекомбинация представляет собой безызлучательный трёхчастичный процесс. По типу носителей заряда, участвующих
-в процессе он делится на CCV и VVC процессы (процесс с участием двух электронов и дырки и процесс с двумя дырками
+в процессе он делится на CCHC и HHCH процессы (процесс с участием двух электронов и дырки и процесс с двумя дырками
 и электронм соответственно). В ходе этого процесса пара носителей с противоположным зарядом взаимоуничтожается и
 передаёт энергию и импульс третьему. В силу выполнения законов сохранения этот процесс является пороговым.
 Поэтому температура сильнг влияет на темп таких процессов, а значит и на эффективность лазеров.
@@ -40,25 +38,25 @@
 существуют законы дисперсии, в которых такие процессы принципиально запрещены законами сохраниения (к примеру Дираковский 
 или графеноподобный закон дисперсии), а возможны структуры, в которых энергетический порог таких эффектов стремится к нулю.
 
-Спектральный диапазон 5 - 15 ТГц к настоящему моменту частично 
+Спектральный диапазон 5 - 15 THz к настоящему моменту частично 
 перекрыт лишь диодными лазерами на основе халькогенидов свинца-олова, которые обеспечивают длины 
 волн излучения вплоть до 46.5 $\mu m$ \cite{Intro8}. Фактор, который снижает эффективность Оже-рекомбинации в PbSnSe(Te) \cite{Intro1}, \cite{Intro9}
 - симметрия между законами дисперсии носителей в зоне проводимости и в валентной зоне. Однако их рабочие характеристики 
 ограничены технологией роста: существуют труднопреодолимые проблемы в реализации квантовых ям (КЯ) для твердых растворов 
-PbSnSe(Te) и остаточная концентрация носителей остается на высоком уровне $10^17 \text{cm}^{-3}$. К тому же технология производства подобных
+PbSnSe(Te) и остаточная концентрация носителей остается на высоком уровне $10^{17} \text{cm}^{-3}$. К тому же технология производства подобных
 полупроводников пока не отработана в достаточной мере, что не позволяет выращивать структуры с квантовыми ямами и единственной возможностью
 влиять на дисперсионное соотношение и ширину запрещенной зоны является изменение состоава.
 
 Существуют альтернативные полупроводниковые системы, которые позволяют
-приблизиться к «графеноподобному» закону дисперсии, но сохранить конечную ширину запрещенной зоны. 
+приблизиться к дираковскому закону дисперсии, но сохранить конечную ширину запрещенной зоны. 
 Как было показано в многочисленных работах, одна из таких систем - гетероструктуры с КЯ на основе Hg(Cd)Te/CdHgTe. 
 В отличие от графена, в структурах на основе HgCdTe (КРТ) с КЯ можно перестраивать ширину запрещенной зоны путем изменения ширины КЯ и 
 содержания Cd в ней. Современная молекулярно-лучевая эпитаксия (МЛЭ) обеспечивает высокое качество эпитаксиальных пленок КРТ не только на подложках CdZnTe, 
-но и на «альтернативных» подложках GaAs. Высокое качество эпитаксиальных структур HgCdTe, выращенных на GaAs подложках, было подтверждено в ходе исследований 
+но и на «альтернативных» подложках GaAs \cite{Varavin:2003}. Высокое качество эпитаксиальных структур HgCdTe, выращенных на GaAs подложках, было подтверждено в ходе исследований 
 фотопроводимости (ФП) и фотолюминесценции (ФЛ) в среднем и дальнем инфракрасном диапазонах ($λ$ = 15-30 $\mu m$). Было получено 
 стимулированное излучение (СИ) в КРТ структурах с КЯ на длине волны $λ$ = 19.5 $\mu m$, в то время как ранее лазерная генерация в HgCdTe была 
 продемонстрирована лишь в коротковолновой области среднего инфракрасного диапазона спектра (на длинах волн 2 - 5 $\mu m$). 
-Для структур, рассчитанных на генерацию длинноволнового излучения, требуется рост толстых эпитаксиальных слоев (общей толщиной до 20 мкм) для реализации диэлектрического волновода. 
+Для структур, рассчитанных на генерацию длинноволнового излучения, требуется рост толстых эпитаксиальных слоев (общей толщиной до 20 $\mu m$) для реализации диэлектрического волновода. 
 Целью работы настоящей работы было исследование длинноволнового СИ из подобных структур и выявление факторов, определяющие наблюдаемые характеристики СИ, и возможных путей подавления 
 безызлучательной рекомбинации в таких структурах. В работе было продемонстрировано, что возможно подавление Оже-процессов в подобных структурах за счет увеличения его порога. Рассмотрены 
 способы его повышения за счет изменения толщины и состава квантовых ям, состава барьеров.
