--- a/sections/measTechnique.tex
+++ b/sections/measTechnique.tex
@@ -290,7 +290,7 @@
         \begin{minipage}[h]{\linewidth}
             \begin{center}
                 %\includegraphics[width=0.75\linewidth]{./images/spectre_14um.png}
-                \includegraphics[width=0.75\linewidth]{./images/new_f_sp_14um.pdf}
+                \includegraphics[width=0.75\linewidth]{./images/new_14um_spectre.pdf}
 
                 \vspace{0.75cm}
                 \textbf{Спектры стимулированного излучения для структуры, 
@@ -301,7 +301,7 @@
         \begin{minipage}[h]{\linewidth}
             \begin{center}
                 %\includegraphics[width=0.75\linewidth]{./images/spectre_18um.png}
-                \includegraphics[width=0.75\linewidth]{./images/new_f_sp_18um.pdf}
+                \includegraphics[width=0.75\linewidth]{./images/new_18um_spectre.pdf}
 
                 \vspace{0.75cm}
                 \textbf{Спектр стимулированного излучения для структуры, 
@@ -312,7 +312,7 @@
     \end{figure}
 
     Как можно видеть, при изменении температуры происходит сдвиг излучения в сболее коротковолновую область, а также снижение 
-    интенсивности стимулированного излучения. Отчасти снижение структуры может быть объсянено тем, что длина волны становится 
+    интенсивности стимулированного излучения. Отчасти снижение излучения структуры может быть объяснено тем, что длина волны становится 
     нерезонансной для внутренней волноводной структуры. С другой стороны, за счёт нетипичного поведения ширины запрещенной 
     зоны от температуры (для большинства материалов ширина запрещённой зоны растёт с ростом температуры) начинается излучение
     с меньшей длиной волны, что не так пагубно сказывается на добротности волновода как её рост. Отсюда можно сделать вывод о том, 
