--- a/sections/reIntro.tex
+++ b/sections/reIntro.tex
@@ -170,4 +170,7 @@
 
     Важно отметить, что не меньшую роль играет соотношение эффективных
     масс. Очевидно, что чем больше отношение $\mu = m_c / m_h$, тем больше будет порог.
+
+    Отдельно стоит отметить свойства дираковского закона дисперсии. Оказывается, что 
+    для него запрещены оже-переходы.
 \end{document}
