--- a/sections/samplesDesign.tex
+++ b/sections/samplesDesign.tex
@@ -1,9 +1,7 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-    \begin{center}
         \chapter{Дизайн гетероструктур}
-    \end{center}
 
     Во многом дизайн рассматриваемых гетероструткур обусловлен технологическими особенностями их роста.
     Все образцы были получены посредством молекулярно "= лучевой эпитаксии в ИФП СО РАН.
@@ -31,7 +29,7 @@
 
     Однако в данном случае нас больше всего интересует связь между возникновением побочных максимумов и некоторым количеством 
     кадмия, который оказывается напыленным внутри квантовых ям. Очевидно, что использование более чистых в этом смысле структур
-    может предотвратить возникновение канала ОЖЕ рекомбинации типа EEH через них. Однако кроме того методом численной оптимизации параметров 
+    может предотвратить возникновение канала оже-рекомбинации типа EEH через них. Однако кроме того методом численной оптимизации параметров 
     подобных структур могут быть получены параметры, при которых порог Оже рекомбинации в теории будет являться бесконечным (в частности можно добиться почти 
     гиперболического закона дисперсии). Однако на текущий момент подобные структуры не могут быть выращены в силу высоких требований к чистоте исполнения и 
     прецизионного выдерживания толщины КЯ. Более того в таких случаях невозможно рассмотрение лишь радиальной составляющей дисперсионного соотношения,
@@ -47,7 +45,7 @@
     Возможно, перспективным будет являться создание структур с легированием, что позволит искусственно повысить одного из типов носителей заряда и реализовать 
     ситуацию в которой, вопреки дисперсионному соотношению будет превалировать тот или иной механизм Оже-рекомбинации. Это может быть полезным как с точки зрения 
     фундаментальных исследований, так и с точки зрения простоты оптимизации структур (можно будет заботиться о темпе рекомбинации всего по одному механизму). 
-    Более того это может интересно в перспективе с позиции создания быстрых полупроводниковых детектеров, работающих в этой же области электромагнитного спектра 
+    Более того это может интересно в перспективе с позиции создания быстрых полупроводниковых детекторов, работающих в этой же области электромагнитного спектра 
     (в данном случае оже процессы будут играть уже положительную роль).
     
 \end{document}
